assets/styles/main.scss
@import "./mixins";
@import "./shared-classes";
@import "./fonts";
@import "./colors";
@import "./heading";

li {
  list-style: none;
}

a {
  text-decoration: none;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html,
body {
  /* Firefox scrollbar */
  scrollbar-width: thin;
  scrollbar-color: rgb(225, 104, 5);
  background: var(--bg);

  &::-webkit-scrollbar {
    width: 0.3rem;
    overflow: auto;
  }

  &::-webkit-scrollbar-thumb {
    border-radius: 0.3rem;
    background: rgb(225, 104, 5);
  }
}

html {
  font-size: 10px;
  text-rendering: optimizeLegibility;
  -webkit-text-size-adjust: none;

  @include mq(376, 767.98) {
    font-size: calc(10px + 13 * (100vw - 375px) / 447);
  }

  @include mq(768, 1023) {
    font-size: calc(10px + 4 * (100vw - 768px) / 255);
  }

  @include mq(1024, 1359) {
    font-size: calc(8px + 2 * (100vw - 1024px) / 336);
  }

  @include mq(1360, 1599) {
    font-size: 10px;
  }

  @include mq(1600, 1919) {
    font-size: calc(10px + 1 * (100vw - 1600px) / 96);
  }

  @include mq(1920, 9999) {
    font-size: 13.334px;
  }
}

*:before,
*:after {
  box-sizing: inherit;
}

body {
  font-family: Onest, Helvetica, serif;
  font-size: 1.3rem;
  font-style: normal;
  font-weight: 500;
  line-height: 120%;
  letter-spacing: -0.026rem;
  margin: 0;
  background-color: var(--bg);
  color: var(--eggplant);

  @include mq(768) {
    font-size: 1.6rem;
    letter-spacing: -0.032rem;
  }

  @include mq(1200) {
    font-size: 1.6rem;
    line-height: 140%;
    letter-spacing: -0.064rem;
  }
}

